FlexBison/syntatic.output
Terminals unused in grammar

    DEF
    IDENTIFIER


Grammar

    0 $accept: program $end

    1 program: MAKEUP statements FINAL_LOOK

    2 statements: statement
    3           | statements statement

    4 statement: foundation_statement
    5          | blush_statement
    6          | eyeshadow_statement
    7          | eyeliner_statement
    8          | mascara_statement
    9          | lipstick_statement
   10          | lipgloss_statement
   11          | lipbalm_statement
   12          | if_statement
   13          | repeat_statement

   14 foundation_statement: FOUNDATION COLON FOUNDATION_IDENTIFIER

   15 blush_statement: BLUSH COLON BLUSH_IDENTIFIER

   16 eyeshadow_statement: EYESHADOW COLON COLOR_IDENTIFIER

   17 eyeliner_statement: EYELINER COLON EYELINER_IDENTIFIER

   18 mascara_statement: MASCARA COLON MASCARA_IDENTIFIER

   19 lipstick_statement: LIPSTICK COLON LIPSTICK_IDENTIFIER

   20 lipgloss_statement: LIPGLOSS COLON LIPGLOSS_IDENTIFIER

   21 lipbalm_statement: LIPBALM COLON LIPBALM_IDENTIFIER

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY
   23             | IF FOUNDATION_IDENTIFIER IN FOUNDATION THEN LKEY statements RKEY ELSE LKEY statements RKEY
   24             | IF EYESHADOW_IDENTIFIER IN EYESHADOW THEN LKEY statements RKEY ELSE LKEY statements RKEY
   25             | IF EYELINER_IDENTIFIER IN EYELINER THEN LKEY statements RKEY ELSE LKEY statements RKEY
   26             | IF MASCARA_IDENTIFIER IN MASCARA THEN LKEY statements RKEY ELSE LKEY statements RKEY
   27             | IF LIPSTICK_IDENTIFIER IN LIPSTICK THEN LKEY statements RKEY ELSE LKEY statements RKEY
   28             | IF LIPGLOSS_IDENTIFIER IN LIPGLOSS THEN LKEY statements RKEY ELSE LKEY statements RKEY
   29             | IF LIPBALM_IDENTIFIER IN LIPBALM THEN LKEY statements RKEY ELSE LKEY statements RKEY

   30 repeat_statement: REPEAT DIGIT TIMES LKEY statements RKEY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    MAKEUP (258) 1
    FINAL_LOOK (259) 1
    REPEAT (260) 30
    TIMES (261) 30
    IF (262) 22 23 24 25 26 27 28 29
    IN (263) 22 23 24 25 26 27 28 29
    THEN (264) 22 23 24 25 26 27 28 29
    ELSE (265) 22 23 24 25 26 27 28 29
    DEF (266)
    FOUNDATION (267) 14 23
    BLUSH (268) 15 22
    EYESHADOW (269) 16 24
    EYELINER (270) 17 25
    MASCARA (271) 18 26
    LIPSTICK (272) 19 27
    LIPGLOSS (273) 20 28
    LIPBALM (274) 21 29
    COLOR_IDENTIFIER (275) 16
    FOUNDATION_IDENTIFIER (276) 14 23
    BLUSH_IDENTIFIER (277) 15 22
    EYESHADOW_IDENTIFIER (278) 24
    LIPSTICK_IDENTIFIER (279) 19 27
    LIPGLOSS_IDENTIFIER (280) 20 28
    LIPBALM_IDENTIFIER (281) 21 29
    MASCARA_IDENTIFIER (282) 18 26
    EYELINER_IDENTIFIER (283) 17 25
    DIGIT (284) 30
    IDENTIFIER (285)
    LKEY (286) 22 23 24 25 26 27 28 29 30
    RKEY (287) 22 23 24 25 26 27 28 29 30
    COLON (288) 14 15 16 17 18 19 20 21


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    program (35)
        on left: 1
        on right: 0
    statements (36)
        on left: 2 3
        on right: 1 3 22 23 24 25 26 27 28 29 30
    statement (37)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3
    foundation_statement (38)
        on left: 14
        on right: 4
    blush_statement (39)
        on left: 15
        on right: 5
    eyeshadow_statement (40)
        on left: 16
        on right: 6
    eyeliner_statement (41)
        on left: 17
        on right: 7
    mascara_statement (42)
        on left: 18
        on right: 8
    lipstick_statement (43)
        on left: 19
        on right: 9
    lipgloss_statement (44)
        on left: 20
        on right: 10
    lipbalm_statement (45)
        on left: 21
        on right: 11
    if_statement (46)
        on left: 22 23 24 25 26 27 28 29
        on right: 12
    repeat_statement (47)
        on left: 30
        on right: 13


State 0

    0 $accept: • program $end

    MAKEUP  shift, and go to state 1

    program  go to state 2


State 1

    1 program: MAKEUP • statements FINAL_LOOK

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 13
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 2

    0 $accept: program • $end

    $end  shift, and go to state 25


State 3

   30 repeat_statement: REPEAT • DIGIT TIMES LKEY statements RKEY

    DIGIT  shift, and go to state 26


State 4

   22 if_statement: IF • BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY
   23             | IF • FOUNDATION_IDENTIFIER IN FOUNDATION THEN LKEY statements RKEY ELSE LKEY statements RKEY
   24             | IF • EYESHADOW_IDENTIFIER IN EYESHADOW THEN LKEY statements RKEY ELSE LKEY statements RKEY
   25             | IF • EYELINER_IDENTIFIER IN EYELINER THEN LKEY statements RKEY ELSE LKEY statements RKEY
   26             | IF • MASCARA_IDENTIFIER IN MASCARA THEN LKEY statements RKEY ELSE LKEY statements RKEY
   27             | IF • LIPSTICK_IDENTIFIER IN LIPSTICK THEN LKEY statements RKEY ELSE LKEY statements RKEY
   28             | IF • LIPGLOSS_IDENTIFIER IN LIPGLOSS THEN LKEY statements RKEY ELSE LKEY statements RKEY
   29             | IF • LIPBALM_IDENTIFIER IN LIPBALM THEN LKEY statements RKEY ELSE LKEY statements RKEY

    FOUNDATION_IDENTIFIER  shift, and go to state 27
    BLUSH_IDENTIFIER       shift, and go to state 28
    EYESHADOW_IDENTIFIER   shift, and go to state 29
    LIPSTICK_IDENTIFIER    shift, and go to state 30
    LIPGLOSS_IDENTIFIER    shift, and go to state 31
    LIPBALM_IDENTIFIER     shift, and go to state 32
    MASCARA_IDENTIFIER     shift, and go to state 33
    EYELINER_IDENTIFIER    shift, and go to state 34


State 5

   14 foundation_statement: FOUNDATION • COLON FOUNDATION_IDENTIFIER

    COLON  shift, and go to state 35


State 6

   15 blush_statement: BLUSH • COLON BLUSH_IDENTIFIER

    COLON  shift, and go to state 36


State 7

   16 eyeshadow_statement: EYESHADOW • COLON COLOR_IDENTIFIER

    COLON  shift, and go to state 37


State 8

   17 eyeliner_statement: EYELINER • COLON EYELINER_IDENTIFIER

    COLON  shift, and go to state 38


State 9

   18 mascara_statement: MASCARA • COLON MASCARA_IDENTIFIER

    COLON  shift, and go to state 39


State 10

   19 lipstick_statement: LIPSTICK • COLON LIPSTICK_IDENTIFIER

    COLON  shift, and go to state 40


State 11

   20 lipgloss_statement: LIPGLOSS • COLON LIPGLOSS_IDENTIFIER

    COLON  shift, and go to state 41


State 12

   21 lipbalm_statement: LIPBALM • COLON LIPBALM_IDENTIFIER

    COLON  shift, and go to state 42


State 13

    1 program: MAKEUP statements • FINAL_LOOK
    3 statements: statements • statement

    FINAL_LOOK  shift, and go to state 43
    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 14

    2 statements: statement •

    $default  reduce using rule 2 (statements)


State 15

    4 statement: foundation_statement •

    $default  reduce using rule 4 (statement)


State 16

    5 statement: blush_statement •

    $default  reduce using rule 5 (statement)


State 17

    6 statement: eyeshadow_statement •

    $default  reduce using rule 6 (statement)


State 18

    7 statement: eyeliner_statement •

    $default  reduce using rule 7 (statement)


State 19

    8 statement: mascara_statement •

    $default  reduce using rule 8 (statement)


State 20

    9 statement: lipstick_statement •

    $default  reduce using rule 9 (statement)


State 21

   10 statement: lipgloss_statement •

    $default  reduce using rule 10 (statement)


State 22

   11 statement: lipbalm_statement •

    $default  reduce using rule 11 (statement)


State 23

   12 statement: if_statement •

    $default  reduce using rule 12 (statement)


State 24

   13 statement: repeat_statement •

    $default  reduce using rule 13 (statement)


State 25

    0 $accept: program $end •

    $default  accept


State 26

   30 repeat_statement: REPEAT DIGIT • TIMES LKEY statements RKEY

    TIMES  shift, and go to state 45


State 27

   23 if_statement: IF FOUNDATION_IDENTIFIER • IN FOUNDATION THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 46


State 28

   22 if_statement: IF BLUSH_IDENTIFIER • IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 47


State 29

   24 if_statement: IF EYESHADOW_IDENTIFIER • IN EYESHADOW THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 48


State 30

   27 if_statement: IF LIPSTICK_IDENTIFIER • IN LIPSTICK THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 49


State 31

   28 if_statement: IF LIPGLOSS_IDENTIFIER • IN LIPGLOSS THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 50


State 32

   29 if_statement: IF LIPBALM_IDENTIFIER • IN LIPBALM THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 51


State 33

   26 if_statement: IF MASCARA_IDENTIFIER • IN MASCARA THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 52


State 34

   25 if_statement: IF EYELINER_IDENTIFIER • IN EYELINER THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 53


State 35

   14 foundation_statement: FOUNDATION COLON • FOUNDATION_IDENTIFIER

    FOUNDATION_IDENTIFIER  shift, and go to state 54


State 36

   15 blush_statement: BLUSH COLON • BLUSH_IDENTIFIER

    BLUSH_IDENTIFIER  shift, and go to state 55


State 37

   16 eyeshadow_statement: EYESHADOW COLON • COLOR_IDENTIFIER

    COLOR_IDENTIFIER  shift, and go to state 56


State 38

   17 eyeliner_statement: EYELINER COLON • EYELINER_IDENTIFIER

    EYELINER_IDENTIFIER  shift, and go to state 57


State 39

   18 mascara_statement: MASCARA COLON • MASCARA_IDENTIFIER

    MASCARA_IDENTIFIER  shift, and go to state 58


State 40

   19 lipstick_statement: LIPSTICK COLON • LIPSTICK_IDENTIFIER

    LIPSTICK_IDENTIFIER  shift, and go to state 59


State 41

   20 lipgloss_statement: LIPGLOSS COLON • LIPGLOSS_IDENTIFIER

    LIPGLOSS_IDENTIFIER  shift, and go to state 60


State 42

   21 lipbalm_statement: LIPBALM COLON • LIPBALM_IDENTIFIER

    LIPBALM_IDENTIFIER  shift, and go to state 61


State 43

    1 program: MAKEUP statements FINAL_LOOK •

    $default  reduce using rule 1 (program)


State 44

    3 statements: statements statement •

    $default  reduce using rule 3 (statements)


State 45

   30 repeat_statement: REPEAT DIGIT TIMES • LKEY statements RKEY

    LKEY  shift, and go to state 62


State 46

   23 if_statement: IF FOUNDATION_IDENTIFIER IN • FOUNDATION THEN LKEY statements RKEY ELSE LKEY statements RKEY

    FOUNDATION  shift, and go to state 63


State 47

   22 if_statement: IF BLUSH_IDENTIFIER IN • BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

    BLUSH  shift, and go to state 64


State 48

   24 if_statement: IF EYESHADOW_IDENTIFIER IN • EYESHADOW THEN LKEY statements RKEY ELSE LKEY statements RKEY

    EYESHADOW  shift, and go to state 65


State 49

   27 if_statement: IF LIPSTICK_IDENTIFIER IN • LIPSTICK THEN LKEY statements RKEY ELSE LKEY statements RKEY

    LIPSTICK  shift, and go to state 66


State 50

   28 if_statement: IF LIPGLOSS_IDENTIFIER IN • LIPGLOSS THEN LKEY statements RKEY ELSE LKEY statements RKEY

    LIPGLOSS  shift, and go to state 67


State 51

   29 if_statement: IF LIPBALM_IDENTIFIER IN • LIPBALM THEN LKEY statements RKEY ELSE LKEY statements RKEY

    LIPBALM  shift, and go to state 68


State 52

   26 if_statement: IF MASCARA_IDENTIFIER IN • MASCARA THEN LKEY statements RKEY ELSE LKEY statements RKEY

    MASCARA  shift, and go to state 69


State 53

   25 if_statement: IF EYELINER_IDENTIFIER IN • EYELINER THEN LKEY statements RKEY ELSE LKEY statements RKEY

    EYELINER  shift, and go to state 70


State 54

   14 foundation_statement: FOUNDATION COLON FOUNDATION_IDENTIFIER •

    $default  reduce using rule 14 (foundation_statement)


State 55

   15 blush_statement: BLUSH COLON BLUSH_IDENTIFIER •

    $default  reduce using rule 15 (blush_statement)


State 56

   16 eyeshadow_statement: EYESHADOW COLON COLOR_IDENTIFIER •

    $default  reduce using rule 16 (eyeshadow_statement)


State 57

   17 eyeliner_statement: EYELINER COLON EYELINER_IDENTIFIER •

    $default  reduce using rule 17 (eyeliner_statement)


State 58

   18 mascara_statement: MASCARA COLON MASCARA_IDENTIFIER •

    $default  reduce using rule 18 (mascara_statement)


State 59

   19 lipstick_statement: LIPSTICK COLON LIPSTICK_IDENTIFIER •

    $default  reduce using rule 19 (lipstick_statement)


State 60

   20 lipgloss_statement: LIPGLOSS COLON LIPGLOSS_IDENTIFIER •

    $default  reduce using rule 20 (lipgloss_statement)


State 61

   21 lipbalm_statement: LIPBALM COLON LIPBALM_IDENTIFIER •

    $default  reduce using rule 21 (lipbalm_statement)


State 62

   30 repeat_statement: REPEAT DIGIT TIMES LKEY • statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 71
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 63

   23 if_statement: IF FOUNDATION_IDENTIFIER IN FOUNDATION • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 72


State 64

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 73


State 65

   24 if_statement: IF EYESHADOW_IDENTIFIER IN EYESHADOW • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 74


State 66

   27 if_statement: IF LIPSTICK_IDENTIFIER IN LIPSTICK • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 75


State 67

   28 if_statement: IF LIPGLOSS_IDENTIFIER IN LIPGLOSS • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 76


State 68

   29 if_statement: IF LIPBALM_IDENTIFIER IN LIPBALM • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 77


State 69

   26 if_statement: IF MASCARA_IDENTIFIER IN MASCARA • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 78


State 70

   25 if_statement: IF EYELINER_IDENTIFIER IN EYELINER • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 79


State 71

    3 statements: statements • statement
   30 repeat_statement: REPEAT DIGIT TIMES LKEY statements • RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 80

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 72

   23 if_statement: IF FOUNDATION_IDENTIFIER IN FOUNDATION THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 81


State 73

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 82


State 74

   24 if_statement: IF EYESHADOW_IDENTIFIER IN EYESHADOW THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 83


State 75

   27 if_statement: IF LIPSTICK_IDENTIFIER IN LIPSTICK THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 84


State 76

   28 if_statement: IF LIPGLOSS_IDENTIFIER IN LIPGLOSS THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 85


State 77

   29 if_statement: IF LIPBALM_IDENTIFIER IN LIPBALM THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 86


State 78

   26 if_statement: IF MASCARA_IDENTIFIER IN MASCARA THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 87


State 79

   25 if_statement: IF EYELINER_IDENTIFIER IN EYELINER THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 88


State 80

   30 repeat_statement: REPEAT DIGIT TIMES LKEY statements RKEY •

    $default  reduce using rule 30 (repeat_statement)


State 81

   23 if_statement: IF FOUNDATION_IDENTIFIER IN FOUNDATION THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 89
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 82

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 90
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 83

   24 if_statement: IF EYESHADOW_IDENTIFIER IN EYESHADOW THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 91
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 84

   27 if_statement: IF LIPSTICK_IDENTIFIER IN LIPSTICK THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 92
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 85

   28 if_statement: IF LIPGLOSS_IDENTIFIER IN LIPGLOSS THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 93
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 86

   29 if_statement: IF LIPBALM_IDENTIFIER IN LIPBALM THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 94
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 87

   26 if_statement: IF MASCARA_IDENTIFIER IN MASCARA THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 95
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 88

   25 if_statement: IF EYELINER_IDENTIFIER IN EYELINER THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 96
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 89

    3 statements: statements • statement
   23 if_statement: IF FOUNDATION_IDENTIFIER IN FOUNDATION THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 97

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 90

    3 statements: statements • statement
   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 98

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 91

    3 statements: statements • statement
   24 if_statement: IF EYESHADOW_IDENTIFIER IN EYESHADOW THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 99

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 92

    3 statements: statements • statement
   27 if_statement: IF LIPSTICK_IDENTIFIER IN LIPSTICK THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 100

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 93

    3 statements: statements • statement
   28 if_statement: IF LIPGLOSS_IDENTIFIER IN LIPGLOSS THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 101

    statement             go to state 44
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 94

    3 statements: statements • statement
   29 if_statement: IF LIPBALM_IDENTIFIER IN LIPBALM THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 102
